# clock_Esp32

./: CMakeLists.txt  README.md  partitions.csv
.vscode_a/: settings.json
bootloader_components/my_boot_hooks/: CMakeLists.txt  hooks.c
components/AHT30/: CMakeLists.txt  aht30.c  aht30.h
components/MPU6050/: CMakeLists.txt  mpu6050.c  mpu6050.h
components/ST7789V_LCD/: CMakeLists.txt  st7789.c  st7789.h
components/alarm_screen/: CMakeLists.txt  alarm_screen.c  alarm_screen.h
components/ble_gatts_server/: CMakeLists.txt  ble_gatts_server.c  ble_gatts_server.h
components/define/: CMakeLists.txt  define.c  define.h
components/home_screen/: CMakeLists.txt  home_screen.c  home_screen.h
components/icon_font/: CMakeLists.txt  animated.h  color.c  color.h  digit_clock.h  font.h  icon_screen1.h
components/ili9341/: CMakeLists.txt  ili9341.c  ili9341.h
components/mpu6050/: CMakeLists.txt  mpu6050.c  mpu6050.h
components/settings_screen/: CMakeLists.txt  settings_screen.c  settings_screen.h
components/temt6000/: CMakeLists.txt  temt6000.c  temt6000.h
components/vl53l0x/: CMakeLists.txt  vl53l0x_api.c  vl53l0x_api_calibration.c  vl53l0x_api_core.c  vl53l0x_api_ranging.c  vl53l0x_api_strings.c  vl53l0x_init.c  vl53l0x_init.h  vl53l0x_platform.h  vl53l0x_tof.c  vl53l0x_tof.h
main/: CMakeLists.txt  main.c
